Better icon for the choice activity

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -122,7 +122,7 @@ $border-color: #dedede;
 }
 
 .x-module-icon-choice {
-	background:url('../images/assignment.png');
+	background:url('../images/choice.png');
 	background-repeat: no-repeat;
 	background-position-x: 0px;
 	background-position-y: 5px;
