Bugfix: opening forum post file attachments was broken

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -384,6 +384,11 @@ $border-color: #dedede;
 
 .x-post-attachment-list {
 	padding-top: 15px;
+	.x-post-attachment-entry {
+		.x-post-attachment-file {
+			color: $active-color;
+		}
+	}
 }
 
 .x-post-reply {
