--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -62,10 +62,12 @@ $border-color: #dedede;
 .x-module,
 .x-grade,
 .x-folder-entry,
+.x-directory-entry,
 .x-forum-discussion {
 	padding: 5px;
 	border-bottom: 1px solid $border-color;
 }
+
 
 .x-course-section {
 	background-color: white;
@@ -90,9 +92,15 @@ $border-color: #dedede;
 
 .x-module,
 .x-recent-activity,
-.x-folder-entry {
+.x-folder-entry,
+.x-directory-entry {
 	padding-top: 10px;
 	padding-left: 35px;
+}
+
+.x-directory-entry {
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 
@@ -129,6 +137,7 @@ $border-color: #dedede;
 }
 
 .x-module-icon-folder,
+.x-subdirectory-icon,
 .x-subfolder-icon {
 	background:url('../images/folder.png');
 	background-repeat: no-repeat;
