Loading mechanism improvements + about section
Modified the Loading mechanism. The reloading steps between the
UsageAgreement, Account settings and Courses loading have been
reduced to one instead of three.

Added the About section draft. The About section is visible in
the UsageAgreement view and in the Settings view as an additional
tab.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -26,6 +26,24 @@ $border-color: #dedede;
 @include icon('rightarrow', '\e002', 'icoMoon');
 @include icon('marker', '\e003', 'icoMoon');
 
+/*
+ *
+ * About the app
+ *
+ * */
+.about {
+	.title {
+		font-size: 15px;
+		font-weight: bold;
+		padding-top: 10px;
+		padding-bottom: 5px;
+	}
+	.content {
+		font-size: small;
+		padding-bottom: 5px;
+	}
+}
+
 .version {
 	color: gray;
 	font-size: small;
