Ask the user to confirm downloads
The user is now asked to confirm the downloads. In the confirm
prompt the file size and file name are displayed.
The user can skip the confirmation step by checking the
"Download without asking again" checkbox.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -767,3 +767,8 @@ $border-color: #dedede;
 		background-repeat: no-repeat;
 	}
 }
+
+.messagebox-checkbox {
+	background-color: black;
+	color: white;
+}
