--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -392,6 +392,23 @@ $border-color: #dedede;
 	font-size: small;
 }
 
+.x-course-module-info {
+	width: 20px;
+	margin-bottom: 3.5px;
+	background:url('../images/info.png');
+	background-repeat: no-repeat;
+	background-position: right bottom;
+}
+
+.x-course-module-intro {
+	padding: 10px;
+	margin-top: 3px;
+	margin-left: -30px;
+	border: 2px solid gray;
+	border-radius: 7px;
+	background-color: white;
+}
+
 .x-grade-data {
 	text-align: right;
 	color: black;
