Bugfix for course section summaries
Forced the image width to adapt to the app max-width.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -95,6 +95,10 @@ $border-color: #dedede;
 		margin-top: 10px;
 		margin-bottom: 5px;
 		font-size: small;
+		img {
+			max-width: 100% !important;
+			height: auto !important;
+		}
 	}
 }
 
