Assign activity bugfixes + better support
The assign activity submissions are now marked as final by default.
Some minor fixes in the layout and a user frendlier interface.
The button 'Add File' is now shown only when the file limit is not
reached, when the file limit is reached it is hidden.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -658,11 +658,18 @@ $border-color: #dedede;
  *
  * */
 .assignment{
-	.intro {
-		background-color: white;
+	.intro{
 		padding: 5px;
-		padding-top: 10px;
-		padding-bottom: 10px;
+	}
+
+	.intro,
+	.text-submission,
+	.file-submission{
+		background-color: white;
+		.label { }
+		ul {
+			margin-bottom: 0;
+		}
 	}
 	
 	.dates,
